feat(identity/auth; mail-service): add feat forgot and reset password fix(api-gateway): fix midleware api-gateway with regex access public routes docs(api-gateway): update api document
